[package]
name = "bug_of_the_week_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
dotenv = "0.15.0"
env_logger = "0.11.5"
log = "0.4.22"
rand = {version= "0.8.5", features=["small_rng"] }
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serenity = "0.12.2"
tokio = { version = "1.40.0", features = ["full"] }
urlencoding = "2.1.3"
